--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "axios": "^1.2.2",
+    "gapi-script": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
