--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY package.json .
 RUN npm install -g npm@9.5.0
-RUN npm install --force
+RUN npm install
 COPY . .
 
 CMD ["npm", "run", "start"]
